--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,8 +19,23 @@
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QPushButton" name="recoverBUtton">
+        <property name="minimumSize">
+         <size>
+          <width>60</width>
+          <height>60</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>120</width>
+          <height>120</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border-image: url(:/img/backbutt.png);</string>
+        </property>
         <property name="text">
-         <string>PushButton</string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -31,19 +46,24 @@
           <property name="minimumSize">
            <size>
             <width>300</width>
-            <height>120</height>
+            <height>150</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>500</width>
-            <height>120</height>
+            <height>150</height>
            </size>
           </property>
           <property name="font">
            <font>
-            <pointsize>18</pointsize>
+            <pointsize>24</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
            </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(199, 199, 199);</string>
           </property>
           <property name="text">
            <string>Dodaj zamówienie</string>
@@ -52,13 +72,27 @@
         </item>
         <item>
          <widget class="QLabel" name="nextOrderLabel">
+          <property name="minimumSize">
+           <size>
+            <width>300</width>
+            <height>60</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>500</width>
+            <height>60</height>
+           </size>
+          </property>
           <property name="font">
            <font>
-            <pointsize>21</pointsize>
+            <pointsize>25</pointsize>
+            <weight>75</weight>
+            <bold>true</bold>
            </font>
           </property>
           <property name="text">
-           <string>TextLabel</string>
+           <string/>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -69,8 +103,23 @@
       </item>
       <item>
        <widget class="QPushButton" name="soundButton">
+        <property name="minimumSize">
+         <size>
+          <width>60</width>
+          <height>60</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>120</width>
+          <height>120</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border-image: url(:/img/soundButton.png);</string>
+        </property>
         <property name="text">
-         <string>PushButton</string>
+         <string/>
         </property>
        </widget>
       </item>
@@ -82,7 +131,7 @@
        <widget class="QLabel" name="label">
         <property name="maximumSize">
          <size>
-          <width>300</width>
+          <width>400</width>
           <height>100</height>
          </size>
         </property>
@@ -114,7 +163,7 @@
            <x>0</x>
            <y>0</y>
            <width>787</width>
-           <height>317</height>
+           <height>269</height>
           </rect>
          </property>
         </widget>
@@ -139,6 +188,8 @@
     </property>
     <addaction name="actionConnect"/>
     <addaction name="actionDisconnect"/>
+    <addaction name="actionFullScreen"/>
+    <addaction name="actionOrders_reset"/>
     <addaction name="actionKonfiguracja"/>
     <addaction name="separator"/>
     <addaction name="actionInformacje"/>
@@ -170,6 +221,16 @@
   <action name="actionServerFullScreen">
    <property name="text">
     <string>Pelny Ekran Serwera</string>
+   </property>
+  </action>
+  <action name="actionOrders_reset">
+   <property name="text">
+    <string>Zresetuj zamówienia</string>
+   </property>
+  </action>
+  <action name="actionFullScreen">
+   <property name="text">
+    <string>Pełny Ekran</string>
    </property>
   </action>
  </widget>
