--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -65,7 +65,8 @@
              </font>
             </property>
             <property name="styleSheet">
-             <string notr="true">background-color: rgb(199, 199, 199);</string>
+             <string notr="true">background-color: rgb(199, 199, 199);
+border-radius: 50px;</string>
             </property>
             <property name="text">
              <string>Dodaj zamówienie</string>
